correcao bugs